--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <exec.mainClass>IdfCounter</exec.mainClass>
+        <exec.mainClass>TfIdfCounter</exec.mainClass>
     </properties>
 
     <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
